--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,14 +1,52 @@
 <div class="w-screen h-screen bg-gray-50 relative">
   <div class="absolute w-full h-full">
-    <img class="absolute w-96 left-0 bottom-0" src="/assets/svg/login-bg-left.svg" alt="bg left">
-    <img class="absolute w-96 right-0 bottom-0" src="/assets/svg/login-bg-rigth.svg" alt="bg rigth">
+    <img
+      class="absolute w-96 left-0 bottom-0"
+      src="/assets/svg/login-bg-left.svg"
+      alt="bg left"
+    />
+    <img
+      class="absolute w-96 right-0 bottom-0"
+      src="/assets/svg/login-bg-rigth.svg"
+      alt="bg rigth"
+    />
   </div>
   <div class="relative w-4/12 m-auto">
     <header class="pt-6 pb-2 flex justify-center">
-      <img class="w-56" src="/assets/images/logo/logo-gradient-blue-trello.png" alt="logo">
+      <img
+        class="w-56"
+        src="/assets/images/logo/logo-gradient-blue-trello.png"
+        alt="logo"
+      />
     </header>
-    <div class="bg-white rounded shadow">
-      <h1>as</h1>
+    <div class="bg-white rounded shadow py-4 px-6">
+      <div class="mb-4">
+        <h1 class="text-center font-semibold pt-4 pb-8">Log In to Trello</h1>
+        <form novalidate class="space-y-4">
+          <div class="relative">
+            <input
+              placeholder="Enter email"
+              type="email"
+              class="w-full rounded bg-gray-100 border-2 border-gray-300"
+            />
+          </div>
+          <div class="relative">
+            <input
+              placeholder="Enter password"
+              type="password"
+              class="w-full rounded bg-gray-100 border-2 border-gray-300"
+            />
+          </div>
+          <div>
+            <button
+              class="text-white w-full px-5 py-2 font-medium rounded text-sm bg-green-700"
+              type="submit"
+            >
+              Log In
+            </button>
+          </div>
+        </form>
+      </div>
     </div>
   </div>
 </div>
