--- a/src/app/pages/boards/boards.component.html
+++ b/src/app/pages/boards/boards.component.html
@@ -1,2 +1,31 @@
 <app-navbar></app-navbar>
-<h1>Boards Page</h1>
+<div class="container mx-auto flex mt-10">
+  <div class="w-1/5 mr-4">
+    <ul class="flex flex-col font-medium text-gray-700">
+      <li>
+        <a class="block bg-sky-100 rounded py-1 px-3 text-sky-700"
+          ><fa-icon [icon]="faTrello"></fa-icon> Boards</a
+        >
+      </li>
+      <li>
+        <a class="block py-1 px-3"
+          ><fa-icon [icon]="faBox"></fa-icon> Templates</a
+        >
+      </li>
+      <li>
+        <a class="block py-1 px-3"
+          ><fa-icon [icon]="faWaveSquare"></fa-icon> Home</a
+        >
+      </li>
+    </ul>
+  </div>
+  <div class="w-full">
+    <h1 class="text-lg font-bold mb-4"><fa-icon [icon]="faClock"></fa-icon> Recently viewed</h1>
+    <div class="grid grid-cols-4 gap-4">
+      <div class="w-full bg-sky-700 px-4 py-2 rounded text-white font-bold h-24">Board 1</div>
+      <div class="w-full bg-green-700 px-4 py-2 rounded text-white font-bold h-24">Board 1</div>
+      <div class="w-full bg-amber-700 px-4 py-2 rounded text-white font-bold h-24">Board 1</div>
+      <div class="w-full bg-indigo-700 px-4 py-2 rounded text-white font-bold h-24">Board 1</div>
+    </div>
+  </div>
+</div>
