--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -63,7 +63,7 @@
     <div class="py-3 px-4 flex justify-between">
       <span class="block text-sm text-center text-gray-900">Account</span>
       <button (click)="isOpen = !isOpen" class="block text-sm text-gray-900">
-        x
+        <fa-icon [icon]="faClose"></fa-icon>
       </button>
     </div>
     <div class="py-3 px-4 flex items-center space-x-4">
