--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -10,7 +10,7 @@
         />
       </a>
       <div class="flex items-center">
-        <ul class="flex items-center space-x-8 text-sm font-medium">
+        <ul class="flex items-center space-x-2 text-sm font-medium">
           <li>
             <a class="block py-3 px-4 text-white">Workspaces</a>
           </li>
@@ -18,7 +18,7 @@
             <a class="block py-3 px-4 text-white">Recent</a>
           </li>
           <li>
-            <app-btn typeBtn="button">Create</app-btn>
+            <app-btn typeBtn="button" color="sky">Create</app-btn>
           </li>
         </ul>
       </div>
