--- a/src/app/pages/boards/boards.component.html
+++ b/src/app/pages/boards/boards.component.html
@@ -1,7 +1,7 @@
 <app-navbar></app-navbar>
 <div class="container mx-auto flex mt-10">
   <div class="w-1/5 mr-4">
-    <ul class="flex flex-col font-medium text-gray-700">
+    <ul class="flex flex-col font-medium text-gray-700 mb-10">
       <li>
         <a class="block bg-sky-100 rounded py-1 px-3 text-sky-700"
           ><fa-icon [icon]="faTrello"></fa-icon> Boards</a
@@ -18,6 +18,44 @@
         >
       </li>
     </ul>
+
+    <cdk-accordion>
+      <cdk-accordion-item #accordionMenu="cdkAccordionItem">
+        <button class="w-full py-1 px-2 flex justify-between items-center" type="button" (click)="accordionMenu.toggle()">
+          My workspace
+          <fa-icon [icon]="accordionMenu.expanded ? faAngleUp : faAngleDown"></fa-icon>
+        </button>
+        <div [style.display]="accordionMenu.expanded ? '' : 'none' ">
+          <ul class="ml-2 flex flex-col text-sm text-gray-700">
+            <li>
+              <a class="block py-1 px-3"
+                ><fa-icon [icon]="faTrello"></fa-icon> Boards</a
+              >
+            </li>
+            <li>
+              <a class="block py-1 px-3"
+                ><fa-icon [icon]="faHeart"></fa-icon> Highlights</a
+              >
+            </li>
+            <li>
+              <a class="block py-1 px-3"
+                ><fa-icon [icon]="faBorderAll"></fa-icon> Views</a
+              >
+            </li>
+            <li>
+              <a class="block py-1 px-3"
+                ><fa-icon [icon]="faUsers"></fa-icon> Members</a
+              >
+            </li>
+            <li>
+              <a class="block py-1 px-3"
+                ><fa-icon [icon]="faGear"></fa-icon> Settings</a
+              >
+            </li>
+          </ul>
+        </div>
+      </cdk-accordion-item>
+    </cdk-accordion>
   </div>
   <div class="w-full">
     <h1 class="text-lg font-bold mb-4"><fa-icon [icon]="faClock"></fa-icon> Recently viewed</h1>
