--- a/src/app/pages/board/board.component.html
+++ b/src/app/pages/board/board.component.html
@@ -4,13 +4,13 @@
     <div>
       <h2 class="text-xl font-bold text-white my-4">Demo Board</h2>
     </div>
-    <div class="flex items-start w-full h-full">
+    <div class="flex items-start w-full h-full" cdkDropListGroup>
       <div class="rounded bg-gray-200 w-72 p-2 mr-3">
         <div class="flex justify-between py-1">
           <h3 class="text-sm font-bold ml-2">To Do</h3>
         </div>
 
-        <div class="text-sm mt-2" cdkDropList (cdkDropListDropped)="drop($event)">
+        <div class="text-sm mt-2 min-h-[2.5rem]" cdkDropList (cdkDropListDropped)="drop($event)" [cdkDropListData]="todos">
           <div
             *ngFor="let todo of todos"
             cdkDrag
@@ -26,45 +26,29 @@
           <h3 class="text-sm font-bold ml-2">Doing</h3>
         </div>
 
-        <div class="text-sm mt-2">
+        <div class="text-sm mt-2 min-h-[2.5rem]" cdkDropList (cdkDropListDropped)="drop($event)" [cdkDropListData]="doing">
           <div
+            *ngFor="let todo of doing"
+            cdkDrag
             class="bg-white shadow p-2 rounded mt-2 border-b border-x-gray-300 cursor-pointer hover:bg-gray-400"
           >
-            Task 1
-          </div>
-          <div
-            class="bg-white shadow p-2 rounded mt-2 border-b border-x-gray-300 cursor-pointer hover:bg-gray-400"
-          >
-            Task 2
-          </div>
-          <div
-            class="bg-white shadow p-2 rounded mt-2 border-b border-x-gray-300 cursor-pointer hover:bg-gray-400"
-          >
-            Task 3
+            {{ todo.title }}
           </div>
         </div>
       </div>
 
-      <div class="rounded bg-gray-200 w-72 p-2 mr-3">
+      <div class="rounded bg-gray-200 w-72 p-2 mr-3" >
         <div class="flex justify-between py-1">
           <h3 class="text-sm font-bold ml-2">Done</h3>
         </div>
 
-        <div class="text-sm mt-2">
+        <div class="text-sm mt-2 min-h-[2.5rem]" cdkDropList (cdkDropListDropped)="drop($event)" [cdkDropListData]="done">
           <div
+            *ngFor="let todo of done"
+            cdkDrag
             class="bg-white shadow p-2 rounded mt-2 border-b border-x-gray-300 cursor-pointer hover:bg-gray-400"
           >
-            Task 1
-          </div>
-          <div
-            class="bg-white shadow p-2 rounded mt-2 border-b border-x-gray-300 cursor-pointer hover:bg-gray-400"
-          >
-            Task 2
-          </div>
-          <div
-            class="bg-white shadow p-2 rounded mt-2 border-b border-x-gray-300 cursor-pointer hover:bg-gray-400"
-          >
-            Task 3
+            {{ todo.title }}
           </div>
         </div>
       </div>
