:construction: Work in styles

--- a/src/app/pages/table/table.component.html
+++ b/src/app/pages/table/table.component.html
@@ -1,34 +1,40 @@
 <div class="flex flex-col h-screen">
   <app-navbar></app-navbar>
   <div class="w-full grow bg-white-600 p-6">
-    <table cdk-table [dataSource]="products">
-      <tr cdk-header-row *cdkHeaderRowDef="columns"></tr>
-      <tr cdk-row *cdkRowDef="let row; columns: columns"></tr>
+    <h1 class="text-xl text-gray-700 font-semibold italic mb-5">Table</h1>
+    <table class="w-full text-sm text-left text-gray-500" cdk-table [dataSource]="products">
+      <tr cdk-header-row class="text-xs text-gray-700 uppercase bg-gray-50 " *cdkHeaderRowDef="columns"></tr>
+      <tr cdk-row class="bg-white border-b" [ngClass]="{'bg-red-200': row.price < 100}" *cdkRowDef="let row; columns: columns"></tr>
+      <tr cdk-footer-row class="text-xl text-gray-700 uppercase bg-gray-200 " *cdkFooterRowDef="columns"></tr>
 
       <!-- Price Column -->
       <ng-container cdkColumnDef="price">
-        <th cdk-header-cell *cdkHeaderCellDef>Price</th>
-        <td cdk-cell *cdkCellDef="let row">{{ row.price }}</td>
+        <th cdk-header-cell class="py-3 px-6" *cdkHeaderCellDef>Price</th>
+        <td cdk-cell class="py-4 px-6" *cdkCellDef="let row">{{ row.price }}</td>
+        <td cdk-footer-cell class="py-3 px-6" *cdkFooterCellDef>{{ total }}</td>
       </ng-container>
 
       <!-- Id Column -->
       <ng-container cdkColumnDef="#No">
-        <th cdk-header-cell *cdkHeaderCellDef>Id.</th>
-        <td cdk-cell *cdkCellDef="let row">{{ row.id }}</td>
+        <th cdk-header-cell class="py-3 px-6" *cdkHeaderCellDef>Id.</th>
+        <td cdk-cell class="py-4 px-6" *cdkCellDef="let row">{{ row.id }}</td>
+        <td cdk-footer-cell class="py-3 px-6" *cdkFooterCellDef></td>
       </ng-container>
 
       <!-- Cover Column -->
       <ng-container cdkColumnDef="cover">
-        <th cdk-header-cell *cdkHeaderCellDef>Cover</th>
-        <td cdk-cell *cdkCellDef="let row">
-          <img class="w-64" [src]="row.images[0]" alt="">
+        <th cdk-header-cell class="py-3 px-6" *cdkHeaderCellDef>Cover</th>
+        <td cdk-cell class="py-4 px-6" *cdkCellDef="let row">
+          <img class="w-20" [src]="row.images[0]" alt="">
         </td>
+        <td cdk-footer-cell class="py-3 px-6" *cdkFooterCellDef></td>
       </ng-container>
 
       <!-- Title Column -->
       <ng-container cdkColumnDef="Name">
-        <th cdk-header-cell *cdkHeaderCellDef>title</th>
-        <td cdk-cell *cdkCellDef="let row">{{ row.title }}</td>
+        <th cdk-header-cell class="py-3 px-6" *cdkHeaderCellDef>title</th>
+        <td cdk-cell class="py-4 px-6" *cdkCellDef="let row">{{ row.title }}</td>
+        <td cdk-footer-cell class="py-3 px-6" *cdkFooterCellDef></td>
       </ng-container>
     </table>
   </div>
