--- a/src/app/components/btn/btn.component.html
+++ b/src/app/components/btn/btn.component.html
@@ -1,6 +1,6 @@
 <button
   [type]="typeBtn"
-  class=" w-full font-medium rounded text-sm text-left px-5 py-2  focus:ring-4"
+  class="w-full font-medium rounded text-sm px-5 py-2  focus:ring-4"
   [ngClass]="colors"
 >
   <ng-content></ng-content>
